--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                         <div class="image-gallery">
                             <div class="image-item">
                                 <div class="image-title">🔌 Arduino Uno</div>
-                                <img src="Images/Circuito Semáforo.jpg" alt="Circuito Semáforo">
+                                <img src="https://ibb.co/9mXXx2rW" alt="Circuito Semáforo">
                                 <div class="image-description">
                                     Vista general del Arduino UNO.
                                 </div>
@@ -1160,3 +1160,4 @@ void loop() {
     </script>
 </body>
 </html>
+
