--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@
                 <button class="nav-btn" onclick="showProject(4)">Proyecto 4</button>
                 <button class="nav-btn" onclick="showProject(5)">Proyecto 5</button>
                 <button class="nav-btn" onclick="showProject(6)">Proyecto 6</button>
+                <button class="nav-btn" onclick="showProject(8)">Proyecto 8</button>
             </div>
         </nav>
 
@@ -1190,6 +1191,72 @@ void loop() {
         </div>
     </div>
 
+    <!-- Proyecto 8 -->
+        <div id="project8" class="project-section">
+            <div class="project-card">
+                <h2 class="project-title">Proyecto de Robot Lego - Recorrido de 1 Metro</h2>
+                
+                <div class="content-section">
+                    <div class="media-section">
+                        <h3 class="section-title">Imágenes del Proyecto</h3>
+                        <div class="image-gallery">
+                            <div class="image-item">
+                                <div class="image-title">🔌 Robot de Lego</div>
+                                <img src="https://i.ibb.co/60FJJZSy/Robot-Lego.png" alt="Robot Lego">
+                                <div class="image-description">
+                                    Vista general.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <h3 class="section-title">Introducción</h3>
+                <p>Este proyecto es un programa básico para un robot educativo (como mBot o similar). Su funcionamiento es:</p>
+                    <li>Al iniciar el programa, se enciende una luz LED en el robot (para indicar que está activo).</li>
+                    <li>Luego, el robot avanza hacia adelante durante el tiempo que tardan sus ruedas en dar 5.7 rotaciones.</li>
+                <p> Es un proyecto introductorio que combina eventos (inicio del programa), luces (efecto visual) y movimiento (acción física del robot), ideal para aprender cómo controlar varias funciones al mismo tiempo.</p>
+
+                <h3 class="section-title">Objetivos</h3>
+                <ul class="objectives-list">
+                    <li>Dominar el control básico del movimiento de un robot</li>
+                    <li>Aprender a controlar salidas visuales (LEDs)</li>
+                    <li>Comprender el uso de eventos en programación de robots</li>
+                </ul>
+
+                <h3 class="section-title">Materiales Utilizados</h3>
+                <div class="materials-grid">
+                    <div class="material-item">
+                        <strong>Arduino Uno</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Robot Educativo Básico</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Led integrado o externo</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Motores de tracción</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Baterías</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Cable USB</strong>
+                    </div>
+                </div>
+
+                <h3 class="section-title">Bloques de Comandos</h3>
+                <div class="diagram-section">
+                    <img src="https://i.ibb.co/Vp0pxhT8/bloque1.png" alt="Diagrama RGB">
+                </div>
+                <div class="conclusions">
+                    <h3 class="section-title">Conclusiones</h3>
+                    <p>La práctica permitió comprender de manera sencilla cómo un programa puede coordinar diferentes funciones en un robot educativo, integrando eventos, señales visuales y movimiento. El encendido del LED al inicio del programa no solo sirve como indicador de estado, sino que introduce el concepto de retroalimentación visual, mientras que el avance del robot durante un número definido de rotaciones muestra la relación entre programación y acción física.</p>
+                </div>
+            </div>
+        </div>
+
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 - Portafolio de Evidencias en Robótica</p>
@@ -1269,5 +1336,6 @@ void loop() {
     </script>
 </body>
 </html>
+
 
 
