--- a/index.html
+++ b/index.html
@@ -478,6 +478,8 @@
                 <button class="nav-btn" onclick="showProject(6)">Proyecto 6</button>
                 <button class="nav-btn" onclick="showProject(7)">Proyecto 7</button>
                 <button class="nav-btn" onclick="showProject(8)">Proyecto 8</button>
+                <button class="nav-btn" onclick="showProject(9)">Proyecto 9</button>
+                <button class="nav-btn" onclick="showProject(10)">Proyecto 10</button>
             </div>
         </nav>
 
@@ -1354,6 +1356,133 @@ void loop() {
             </div>
         </div>
 
+        <!-- Proyecto 9 -->
+        <div id="project9" class="project-section">
+            <div class="project-card">
+                <h2 class="project-title">Proyecto de Robot Lego - Levantar un Objeto</h2>
+                
+                <div class="content-section">
+                    <div class="media-section">
+                        <h3 class="section-title">Imágenes del Proyecto</h3>
+                        <div class="image-gallery">
+                            <div class="image-item">
+                                <div class="image-title">🔌 Robot de Lego</div>
+                                <img src="https://i.ibb.co/jPC6y1S5/robotlego.png" alt="Robot Lego">
+                                <div class="image-description">
+                                    Vista general.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <h3 class="section-title">Introducción</h3>
+                <p>En esta práctica el robot avanzara unos 50 cm para que en el suelo se coloque un objeto, el robot se detendrá para que el robot baje sus brazos y recoja el objeto eso mediante un intervalo de espera de 5 segundos para después volver a subir sus brazos y este se de la vuelta y gire al inicio de donde estaba.</p>
+
+                <h3 class="section-title">Objetivos</h3>
+                <ul class="objectives-list">
+                    <li>Dominar el control básico del movimiento de un robot</li>
+                    <li>Aprender a controlar salidas visuales (LEDs)</li>
+                    <li>Comprender el uso de eventos en programación de robots</li>
+                </ul>
+
+                <h3 class="section-title">Materiales Utilizados</h3>
+                <div class="materials-grid">
+                    <div class="material-item">
+                        <strong>Arduino Uno</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Robot Educativo Básico</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Led integrado o externo</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Motores de tracción</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Baterías</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Cable USB</strong>
+                    </div>
+                </div>
+
+                <h3 class="section-title">Bloques de Comandos</h3>
+                <div class="diagram-section">
+                    <img src="" alt="Diagrama RGB">
+                </div>
+                <div class="conclusions">
+                    <h3 class="section-title">Conclusiones</h3>
+                    <p>La práctica permitió comprender de manera sencilla cómo un programa puede coordinar diferentes funciones en un robot educativo, integrando eventos, señales visuales y movimiento. El encendido del LED al inicio del programa no solo sirve como indicador de estado, sino que introduce el concepto de retroalimentación visual, mientras que el avance del robot durante un número definido de rotaciones muestra la relación entre programación y acción física.</p>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Proyecto 10 -->
+        <div id="project10" class="project-section">
+            <div class="project-card">
+                <h2 class="project-title">Proyecto de Robot Lego - Giro del Robot</h2>
+                
+                <div class="content-section">
+                    <div class="media-section">
+                        <h3 class="section-title">Imágenes del Proyecto</h3>
+                        <div class="image-gallery">
+                            <div class="image-item">
+                                <div class="image-title">🔌 Robot de Lego</div>
+                                <img src="https://i.ibb.co/YB3gPYfR/robotlego2.png" alt="Robot Lego">
+                                <div class="image-description">
+                                    Vista general.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <h3 class="section-title">Introducción</h3>
+                <p>En está práctica hay que hacer girar varias veces al robot de una manera en que vuelva al punto de donde comenzó, empezar a girar y luego avanzar para volver a girar y finalmente volver.</p>
+
+                <h3 class="section-title">Objetivos</h3>
+                <ul class="objectives-list">
+                    <li>Dominar el control básico del movimiento de un robot</li>
+                    <li>Aprender a controlar salidas visuales (LEDs)</li>
+                    <li>Comprender el uso de eventos en programación de robots</li>
+                </ul>
+
+                <h3 class="section-title">Materiales Utilizados</h3>
+                <div class="materials-grid">
+                    <div class="material-item">
+                        <strong>Arduino Uno</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Robot Educativo Básico</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Led integrado o externo</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Motores de tracción</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Baterías</strong>
+                    </div>
+                    <div class="material-item">
+                        <strong>Cable USB</strong>
+                    </div>
+                </div>
+
+                <h3 class="section-title">Bloques de Comandos</h3>
+                <div class="diagram-section">
+                    <img src="https://i.ibb.co/N6BnMfC7/bloque2.png" alt="Diagrama RGB">
+                </div>
+                <div class="conclusions">
+                    <h3 class="section-title">Conclusiones</h3>
+                    <p>La práctica permitió comprender cómo programar movimientos repetitivos y coordinados en un robot educativo, integrando giros y desplazamientos para lograr que regrese al punto inicial. El ejercicio muestra la importancia de calcular y ejecutar secuencias de rotación y avance de manera precisa, reforzando la noción de control espacial y orientación en robótica.</p>
+                </div>
+            </div>
+        </div>
+
     <footer class="footer">
         <div class="container">
             <p>&copy; 2024 - Portafolio de Evidencias en Robótica</p>
@@ -1433,6 +1562,7 @@ void loop() {
     </script>
 </body>
 </html>
+
 
 
 
