--- a/index.html
+++ b/index.html
@@ -1196,7 +1196,7 @@ void loop() {
                 <!-- Proyecto 7 -->
         <div id="project7" class="project-section">
             <div class="project-card">
-                <h2 class="project-title">El Uso del Sensor Ultrasonico en la Activacion de un Led</h2>
+                <h2 class="project-title">El Uso de Arduino en la Activacion de un Led</h2>
                 
                 <div class="content-section">
                     <div class="media-section">
@@ -1562,6 +1562,7 @@ void loop() {
     </script>
 </body>
 </html>
+
 
 
 
