--- a/index.html
+++ b/index.html
@@ -1064,6 +1064,7 @@ void loop() {
                                 <div class="image-description">
                                     Demostración de la distancia en Donde el led no enciende.
                                 </div>
+                            </div>
                                 
                              <div class="image-item">
                                 <div class="image-title">💡 Distancia De Encendido</div>
@@ -1562,6 +1563,7 @@ void loop() {
     </script>
 </body>
 </html>
+
 
 
 
