--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                 <button class="nav-btn" onclick="showProject(8)">Proyecto 8</button>
                 <button class="nav-btn" onclick="showProject(9)">Proyecto 9</button>
                 <button class="nav-btn" onclick="showProject(10)">Proyecto 10</button>
-                <button class="nav-btn" onclick="showProject(ROBOT)">Proyecto ROBOT</button>
+                <button class="nav-btn" onclick="showProject(11)">Proyecto ROBOT</button>
             </div>
         </nav>
 
@@ -1486,7 +1486,7 @@ void loop() {
         </div>
     
             <!-- Proyecto ROBOT -->
-        <div id="projectROBOT" class="project-section">
+        <div id="project11" class="project-section">
             <div class="project-card">
                 <h2 class="project-title">Uso de lo Aprendido para Creacion del Robot Seguidor de linea</h2>
                 
@@ -1800,6 +1800,7 @@ void turnRight() {
     </script>
 </body>
 </html>
+
 
 
 
