--- a/index.html
+++ b/index.html
@@ -1488,7 +1488,7 @@ void loop() {
             <!-- Proyecto ROBOT -->
         <div id="project11" class="project-section">
             <div class="project-card">
-                <h2 class="project-title">Uso de lo Aprendido para Creacion del Robot Seguidor de linea</h2>
+                <h2 class="project-title">Avance del Robot Seguidor De Luz</h2>
                 
                 <div class="content-section">
                     <div class="media-section">
@@ -1499,7 +1499,7 @@ void loop() {
                                 <img src="https://i.ibb.co/RkGt2HTx/Screenshot-2025-11-16-22-44-44.png" alt="Procesos de Conexion">
                                 <div class="image-description">
                                     Pruebas de Procesos de Conexion.
-                                </div>
+                            </div>
                             <div class="image-item">
                                 <div class="image-title">🔌 Uso de nueva carcaza</div>
                                 <img src="https://i.ibb.co/wZvgWKtH/Screenshot-2025-11-16-22-44-26.png" alt="Uso de nueva Carcaza por espacio">
@@ -1800,6 +1800,7 @@ void turnRight() {
     </script>
 </body>
 </html>
+
 
 
 
