--- a/index.html
+++ b/index.html
@@ -1499,6 +1499,7 @@ void loop() {
                                 <img src="https://i.ibb.co/RkGt2HTx/Screenshot-2025-11-16-22-44-44.png" alt="Procesos de Conexion">
                                 <div class="image-description">
                                     Pruebas de Procesos de Conexion.
+                                </div>
                             </div>
                             <div class="image-item">
                                 <div class="image-title">🔌 Uso de nueva carcaza</div>
@@ -1800,6 +1801,7 @@ void turnRight() {
     </script>
 </body>
 </html>
+
 
 
 
